# siyaj_uns

./: .gitignore  README.md  Siyaj_Detection_Report.ipynb  analyst_bot.py  log_processor.py  main.py  pyproject.toml
.ipynb_checkpoints/: Siyaj_Detection_Report-checkpoint.ipynb
.streamlit/: config.toml
app/: streamlit_app.py
docs/: enterprise-attack.csv
models/: if_model.pkl  kmeans_model.pkl  scaler.pkl
pipeline/: actions.py  alerts.py  detect.py  hypothesis.py  ingest.py  llm_assistant.py  llm_live_assistant.py
scripts/: ensemble.py  evaluate.py  log_parser.py  log_processor.py  make_artifacts.py  preprocess_network(M,W).py  preprocess_network.py  preprocess_network_M_W.py  reference_manager.py  sanity_check.py  siyaj_anomaly_detector.pkl  train_model.py  train_models.py
