[project]
name = "siyaj"
version = "0.1.0"
description = "Siyaj: National Cyber Defense with AI Insight – AI-assisted SOC anomaly detection system"
authors = [
    { name = "Dana Alghamdi", email = "your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

keywords = [
    "cybersecurity",
    "anomaly-detection",
    "machine-learning",
    "soc",
    "ai"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "streamlit",
    "matplotlib",
    "seaborn",
    "python-dotenv",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
